# AutoApply

./: .env.sample  .gitignore  AGENTS.md  CODACY_COVERAGE_SETUP.md  CODER_IMPLEMENTATION_PLAN.md  COMPLETION_SUMMARY.md  DEEPSEEK_REVIEWER_SETUP.md  PR_AND_BRANCH_PROTECTION_GUIDE.md  README.md  REVIEWER_INSTALLATION_TROUBLESHOOTING.md  REVIEWER_PROTOCOL.md  REVIEWER_RECOMMENDATIONS.md  REVIEWER_STATUS_SUMMARY.md  REVIEWER_VERIFICATION_CHECKLIST.md  SPRINT_1_2_SUMMARY.md  SPRINT_3_4_PROGRESS.md  STEP_1_PROMPT_FOR_CLINE.md  SURGICAL_CHANGE_PLAN.md  VALIDATOR_IMPLEMENTATION_SUMMARY.md  WEEK_1_2_PROGRESS.md  check_env.py  cline github repo convo.md  mastermind_prompt_resource.md  pr_body.txt  project_structure.txt  pyproject.toml  server.py  test_qa.py
.claude/: settings.local.json
.github/workflows/: codacy-coverage.yml  deepseek-reviewer.yml  (+1 more)
Claude's_Plan_Reviewer/: Research.md  Review.md
Reviewers/: Codacy Review Graph.xlsx
autoapply/: __init__.py
autoapply_scaffold/: .env.sample  CHANGED_FILES.md  CHANGELOG_SEQUENTIAL_REVIEW.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_REVIEW.md  MULTI_LLM_IMPLEMENTATION.md  README.md  SEQUENTIAL_SYSTEM_COMPLETE.md  __init__.py  config.yaml  mmr_rrf.py  pyrightconfig.json  requirements.txt  setup.py
docs/: DIAGRAMS_README.md  EXPORT_NOTES.md  PR_HANDOFF_CHECKLIST.md  SPRINT_COMPLETION_SUMMARY.md  product_explainer_v1.docx  product_explainer_v1.md  runbook_v0_9.md
examples/: job.json
scripts/: auto_run.py  deepseek_reviewer.py  serve_preview.py
tests/: test_fsm.py  test_quota.py  test_validators.py
(+115 files in other folders)
